= Changelog
:url-repo: https://gitlab.com/antora/antora-lunr-extension

This document provides a summary of all notable changes to this project grouped by release.
For a detailed view of what's changed, refer to the {url-repo}/commits[commit history] of this project.

== Unreleased

=== Added

* Initial rerelease of Antora Lunr integration as an Antora extension
* Expose `generateIndex` as exported function of main script and require path `@antora/lunr-extension/generate-index` (#9)

=== Changed

* Move lib/extension.js to lib/index.js (#6)
* Don't vendor lunr.js script in repository; grab it from require path (#11)
* Configure package exports to both limit what files can be required and to define a require API (#6)
* Use generator context bound to register function of extension instead of function argument
* Pass logger as keyword argument named `logger` to `generateIndex` function (#10)
* Make keyword arguments on `generateIndex` function optional (#10)
* Convert README from Markdown to AsciiDoc
* Change license from MIT to MPL-2.0